# AVRtest

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main.cpp  readme.md  rebuild.sh  testAVR  uart.cpp  uart.h
